# dynamic_scheduling_parallel_server

./: .gitattributes  .gitignore  README.md
data/: abandonment_times.ipynb  agents_service_rates.ipynb  arrival_rates.ipynb
neural_network_solver/solver/: DriftNet.py  H_Net.py  Net.py  equation.py  main.py  solver.py
secondary_analysis/policy_iteration/: policy_iteration.py
secondary_analysis/scaling_algorithm/: generator.py  scale_system.py
secondary_analysis/scaling_algorithm/config/: agents.csv  (+1 more)
secondary_analysis/simulation/neural_network_simulation/: CMakeLists.txt  test.cpp  test.h
secondary_analysis/simulation/neural_network_simulation/configs/100dim/: config.json
secondary_analysis/simulation/neural_network_simulation/configs/100dim/data/: arr_cdf_scaled.csv  x_opt_100dim.csv  xi_optimal_100dim_100utilization.csv
secondary_analysis/simulation/neural_network_simulation/configs/first_2d/: config.json
secondary_analysis/simulation/neural_network_simulation/configs/main/: config.json
secondary_analysis/simulation/neural_network_simulation/configs/main/data/: x_opt_main.csv
secondary_analysis/simulation/neural_network_simulation/configs/second_2d/: config.json
secondary_analysis/simulation/neural_network_simulation/configs/second_2d/data/: cost_2dim.csv  x_opt_2dim.csv  xi_optimal_2dim.csv
secondary_analysis/simulation/neural_network_simulation/configs/variant/: config.json
secondary_analysis/simulation/neural_network_simulation/configs/variant/data/: mu_hourly.csv
secondary_analysis/static_allocation_problem/: static_allocation_model.jl
(+115 files in other folders)
