cmake_minimum_required(VERSION 3.20)
project(prdes)
find_package(OpenMP)
add_definitions(-std=c++14)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-fopenmp")
include_directories(/project/Call_Center_Control/lp_cc/gurobi1101/linux64/include)
link_directories(/project/Call_Center_Control/lp_cc/gurobi1101/linux64/lib)
add_executable(prdes test.cpp test.h)
target_link_libraries(prdes gurobi_c++ gurobi110)
